Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-82382

QtQuick Drag: drag continues after left mouse button released if right button pressed and held before left released

    XMLWordPrintable

Details

    • 184f45762e15c1a31bb4295d831fcc9f8a2d4b30 (qt/qtdeclarative/dev) 937e71a309a3e1125342d465e9e1ff7a29758ca2 (qt/qtdeclarative/5.15)
    • Bug Fixing Week Q2/2020

    Description

      If right mouse button is pressed and held during a drag and not released, the drag works perfectly fine until left mouse button is released. However, any mouse movement after left mouse button is released while right mouse button is still pressed will cause the dragged item to reset its position back to where it started and change drag back to active.

      Note: The example restricts the accepted buttons of the mouse area to LeftMouseButton.

      Steps to reproduce:

      1. Run the attached project
      2. Move cursor on top of red rectangle, press and hold left mouse button
      3. Press and hold right mouse button
      4. Drag the rectangle anywhere
      5. Release left mouse button (keep right pressed)
      6. Move mouse cursor

      Attachments

        1. qtbug82382_diag.diff
          4 kB
        2. qtbug82382_log.txt
          1 kB
        3. qtbug82382.zip
          1 kB
        For Gerrit Dashboard: QTBUG-82382
        # Subject Branch Project Status CR V

        Activity

          People

            kleint Friedemann Kleint
            miikapernu Miika Pernu
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes