Mouse area: Prevent drag being started with non-accepted mouse buttons

Redirect move events to the quick item if the wrong mouse button is
used.

Pick-to: 5.15
Fixes: QTBUG-82382
Change-Id: I5a78304511b80e6a2e71d2d08a0387509ca96698
Reviewed-by: Shawn Rutledge <shawn.rutledge@qt.io>